--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -1,1 +1,10 @@
-<p>profile-card works!</p>
+<div class="profile-card">
+    <div class="avatar-name">
+        <img src="/Assets/Imgs/sIGMA.png" alt="avatar" class="profile-card_avatar">
+
+        <div class="profile-card__name">
+            <strong> Sigma Klim</strong>
+            <span>SIGMA</span>
+        </div>
+    </div>
+</div>
