--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
+:root {
+    --dark-color: #000000;
+    --light-color: #FFFFFF;
+}
+
+
 body {
-    background-color: pink;
+    background-color: var(--dark-color);
+    color: var(--light-color)
 }
