--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -1,10 +1,14 @@
 <div class="profile-card">
     <div class="avatar-name">
-        <img src="/Assets/Imgs/sIGMA.png" alt="avatar" class="profile-card_avatar">
+        <img src="/Assets/Imgs/Sigma_1.png" alt="avatar" class="profile-card__avatar">
 
         <div class="profile-card__name">
             <strong> Sigma Klim</strong>
             <span>SIGMA</span>
         </div>
     </div>
+</div>
+
+    <div class="profile-card__decription">
+    He is delivery man
 </div>
