--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 :root {
-    --dark-color: #000000;
+    --blue-color: #2c12d6;
     --light-color: #FFFFFF;
 }
 
 
 body {
-    background-color: var(--dark-color);
+    background-color: var(--blue-color);
     color: var(--light-color)
 }
