added bluri avatar

--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -1,6 +1,6 @@
 <div class="profile-card">
     <div class="avatar-name">
-        <img src="/Assets/Imgs/Sigma_1.png" alt="avatar" class="profile-card__avatar">
+        <img src="/Assets/Imgs/holder.png" alt="avatar" class="profile-card__avatar">
 
         <div class="profile-card__name">
             <strong> Sigma Klim</strong>
