--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -1,6 +1,6 @@
 <div class="profile-card">
     <div class="avatar-name">
-        <img src="/Assets/Imgs/Sigma(new)png" alt="avatar" class="profile-card__avatar">
+        <img src="/Assets/Imgs/placeholder3.png" alt="avatar" class="profile-card__avatar">
 
         <div class="profile-card__name">
             <strong> Sigma Klim</strong>
@@ -10,4 +10,15 @@
 
     <div class="profile-card__decription">
     He is delivery man
+    </div>
+
+    <div class="profile-card__tags">
+        <div class="skil-tag">fast</div>
+        <div class="skil-tag">strong</div>
+        <div class="skil-tag">reliable</div>
+    </div>
+
+    <div class="profile-card__action-btns">
+        <button class="btn">Подписаться</button>
+    </div>
 </div>
