--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,28 @@
 :root {
-    --blue-color: #2c12d6;
+    --dark-color: #000000;
     --light-color: #FFFFFF;
+    --primary-color: #AE7AFF;
 }
 
 
 body {
-    background-color: var(--blue-color);
+    background-color: var(--dark-color);
     color: var(--light-color)
+}
+
+.skill-tag {
+    padding: 4px 8 px;
+    border-radius: 4px;
+    border: 1px solid var(--light-color);
+    display: inline;
+    font-size: 12px;
+    font-weight: 700;
+    margin-right: 4px;
+}
+
+.btn {
+    border: none;
+    background: var(--primary-color);
+    color: var(--dark-color);
+    padding: 10px 20 px
 }
