added fonts Name and Nickname

--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -3,8 +3,8 @@
         <img src="/Assets/Imgs/placeholder3.png" alt="avatar" class="profile-card__avatar">
 
         <div class="profile-card__name">
-            <strong> Sigma Klim</strong>
-            <span>SIGMA</span>
+            <strong class="h6"> Sigma Klim</strong>
+            <span class="subtitle">SIGMA</span>
         </div>
     </div>
 
