--- a/src/app/Common-UI/profile-card/profile-card.component.scss
+++ b/src/app/Common-UI/profile-card/profile-card.component.scss
@@ -9,7 +9,7 @@
 
     .avatar-name {
         display: grid;
-        grid-template-columns: 70px 1fr;
+        grid-template-columns: 140px 1fr;
         grid-gap: 20px
     }
 
@@ -29,3 +29,8 @@
         gap: 8px;
     }
 
+
+    .subtitle {
+        font-size: 12px;
+        line-height: 20px;
+    }
