--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,7 +1,28 @@
 @font-face {
     font-style: normal;
     font-display: swap;
+    font-weight: 400;
+    font-family: 'JetBrains Mono';
+    src: url('/Assets/fonts/JetBrainsMono-Thin_woff2');
+}
+
+@font-face {
+    font-style: normal;
+    font-display: swap;
     font-weight: 500;
     font-family: 'JetBrains Mono';
     src: url('/Assets/fonts/JetBrainsMono-Medium_woff2');
 }
+
+
+
+@font-face {
+    font-style: normal;
+    font-display: swap;
+    font-weight: 800;
+    font-family: 'JetBrains Mono';
+    src: url('/Assets/fonts/JetBrainsMono-Bold.woff2');
+}
+
+
+@font
