--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,9 @@ body {
     color: var(--dark-color);
     padding: 10px 20 px
 }
+
+.h6 {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 800;
+}
