--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -3,7 +3,7 @@
     font-display: swap;
     font-weight: 400;
     font-family: 'JetBrains Mono';
-    src: url('/Assets/fonts/JetBrainsMono-Thin_woff2');
+    src: url('/Assets/fonts/JetBrainsMono-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -11,9 +11,8 @@
     font-display: swap;
     font-weight: 500;
     font-family: 'JetBrains Mono';
-    src: url('/Assets/fonts/JetBrainsMono-Medium_woff2');
+    src: url('/Assets/fonts/JetBrainsMono-Medium.woff2') format('woff2');
 }
-
 
 
 @font-face {
@@ -21,8 +20,6 @@
     font-display: swap;
     font-weight: 800;
     font-family: 'JetBrains Mono';
-    src: url('/Assets/fonts/JetBrainsMono-Bold.woff2');
+    src: url('/Assets/fonts/JetBrainsMono-Bold.woff2') format('woff2');
 }
 
-
-@font
