--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import 'fonts';
 
 :root {
-    --dark-color: #080a0a63;
+    --dark-color: #000000;
     --light-color: #eae4e4;
     --primary-color: #AE7AFF;
 }
