--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-profile-card></app-profile-card>
+@for (profile of profiles; track profile.id) {
+    <app-profile-card></app-profile-card>
 
-<pre>
-    {{ profiles | json }}
-</pre>
+
+}
+
