--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-@for (profile of profiles; track profile.id) {
-    <app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
 
-
-}
-
+<pre>
+    {{ profiles | json}}
+</pre>
