--- a/src/app/Common-UI/profile-card/profile-card.component.scss
+++ b/src/app/Common-UI/profile-card/profile-card.component.scss
@@ -2,37 +2,47 @@
     border: 1px solid var(--light-color);
     padding: 32px 24px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr) 200px 1fr;
     grid-gap: 32px;
 }
 
-
-    .avatar-name {
-        display: grid;
-        grid-template-columns: 140px 1fr;
-        grid-gap: 20px
-    }
+.profile-card__description {
+    font-size: 14px;
+    font-weight: 500;
+}
 
 
-    .profile-card__avatar {
-        width: 140;
-        height: 101;
-        border-radius: 50%;
-        overflow: hidden;
-        object-fit: cover;
-    }
+.avatar-name {
+    display: grid;
+    grid-template-columns: 70px 1fr;
+    grid-gap: 20px
+}
 
 
-    .profile-card__name {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-    }
+.profile-card__avatar {
+    width: 1;
+    height: 1;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+}
 
 
-    .subtitle {
-        font-size: 12px;
-        line-height: 20px;
-    }
+.profile-card__name {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
-    
+
+.subtitle {
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.profile-card__tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    height: min-content;
+}
