--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
-@import 'fonts';
+@import "fonts";
+@import "margins";
 
 :root {
     --dark-color: #000000;
     --light-color: #eae4e4;
     --primary-color: #AE7AFF;
+    --gray-color: #5f6460;
 }
 
 *,
@@ -12,14 +14,15 @@
     box-sizing: border-box;
     margin: 0;
     \padding: 0;
-
 }
 
 
 body {
-    background-color: var(--dark-color);
-    color: var(--light-color)
-}
+    font-family: "JetBrains Mono", sans-serif;
+    background: var(--dark-color);
+    color: var(--light-color);
+    background-image: url(/Assets/Imgs/background.png);
+    }
 
 .skill-tag {
     padding: 0px 8px;
@@ -34,6 +37,7 @@ body {
 
 
 .btn {
+    width: 42%;
     border: none;
     background: var(--primary-color);
     color: var(--dark-color);
@@ -41,11 +45,64 @@ body {
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
-
+    cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid var(--dark-color);
 }
+
+.btn-shadow {
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: -4px;
+        right: -4px;
+        background: var(--gray-color);
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+
+    }
+}
+
+.h1 {
+font-size: 48px;
+line-height: 56px;
+font-weight: 800;
+}
+
 
 .h6 {
     font-size: 18px;
     line-height: 24px;
     font-weight: 800;
+}
+
+.subtitle {
+font-size: 14px;
+line-height: 20px;
+}
+
+
+.tt-control-label {
+font-weight: 700;
+font-size: 12px;
+line-height: 16px;
+display: block;
+}
+
+
+.tt-input {
+    margin-top: 8px;
+    display: block;
+    border: 1px solid var(--light-color);
+    border-radius: 4px;
+    padding: 12px 20px;
+    background: var(--dark-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    font-family: "JetBrains Mono", sans-serif;
+    color: var(--light-color);
 }
