--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -1,1 +1,13 @@
-<p>sidebar works!</p>
+<img 
+src ="Assets/svg/Small-logo.png"
+alt=""
+class="ml16 mb20"
+>
+
+<nav>
+    <ul>
+        <li>
+            <button></button>
+        </li>
+    </ul>
+</nav>
