--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -25,6 +25,9 @@ class="login-form"
     >
 
 <button 
+
+(click)="isPasswordVisible.set(!isPasswordVisible())"
+[class.active]="isPasswordVisible()"
   class="password-eye-btn">
   <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path 
