--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -5,9 +5,12 @@ class="ml16 mb20"
 >
 
 <nav>
-    <ul>
+    <ul class="main-menu-list">
         <li>
-            <button></button>
+            <button class="menu-item"></button>
+            <img src="/Assets/s" alt="">
         </li>
     </ul>
 </nav>
+
+
