--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@
     --dark-color: #000000;
     --light-color: #eae4e4;
     --primary-color: #AE7AFF;
-    --gray-color: #5f6460;
+    --gray-color: #5f6460
+    --dark-hover-color: #161616
 }
 
 *,
