--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <img 
-src ="Assets/svg/Small-logo.png"
+src ="Assets/svg/Small-logo.svg"
 alt=""
 class="ml16 mb20"
 >
@@ -8,7 +8,9 @@ class="ml16 mb20"
     <ul class="main-menu-list">
         <li>
             <button class="menu-item"></button>
-            <img src="/Assets/s" alt="">
+            <img src="/Assets/svg/Big-logo.svg" alt="">
+            <span>Моя страница</span>
+            <span></span>
         </li>
     </ul>
 </nav>
