--- a/src/app/Common-UI/sidebar/sidebar.component.scss
+++ b/src/app/Common-UI/sidebar/sidebar.component.scss
@@ -14,10 +14,23 @@
     cursor: pointer;
     border: none;
     background: none;
+    color: var(--light-color);
+    display: grid;
+    grid-template-columns: 16px 1fr max-content;
+    align-items: center;
+    grid-gap: 12px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    width: 100%;
+    text-align: left;
+    border-radius: 2px;
+    
 
 
     &:hover,
     &:focus-visible {
         background: var(--dark-hover-color);
+        color: var(--primary-color);
     }
 }
