--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@ class="ml16 mb20"
     <ul class="main-menu-list">
         <li>
             <button class="menu-item"></button>
-            <img src="/Assets/svg/Big-logo.svg" alt="">
+            <img src="/Assets/svg/home.svg" alt="">
             <span>Моя страница</span>
             <span></span>
         </li>
