--- a/src/app/Common-UI/sidebar/subscriber-card/subscriber-card.component.html
+++ b/src/app/Common-UI/sidebar/subscriber-card/subscriber-card.component.html
@@ -1,6 +1,8 @@
 <img
-class="subsribe-avatar"
-[src]="profile.avatarUrl | imgUrl" 
-[alt]="profile.lastName">
+    class="subscriber-avatar"
+    [src]="profile.avatarUrl | imgUrl"
+    [alt]="profile.lastName"
+>
 
-<strong class="subtitle">{{ profile.firstName }} {{ profile.lastName }}</strong>
+<strong class="subtitle">{{profile.firstName}} {{profile.lastName}}</strong>
+
