--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,8 @@
     --dark-color: #000000;
     --light-color: #eae4e4;
     --primary-color: #AE7AFF;
-    --gray-color: #5f6460
-    --dark-hover-color: #161616
+    --gray-color: #5f6460;
+    --dark-hover-color: #161616;
 }
 
 *,
@@ -14,7 +14,7 @@
 *::after {
     box-sizing: border-box;
     margin: 0;
-    \padding: 0;
+    padding: 0;
 }
 
 
