--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -6,13 +6,23 @@ class="ml16 mb20"
 
 <nav>
     <ul class="main-menu-list">
-        <li>
-            <button class="menu-item"></button>
-            <img src="/Assets/svg/home.svg" alt="">
-            <span>Моя страница</span>
-            <span></span>
-        </li>
+        <li *ngFor="let menuItem of menuItems">
+            <a class="menu-item" [routerLink]="[menuItem]">
+              <svg [icon]="menuItem.icon"></svg>
+              <span>{{  menuItem.label }}</span>
+            </a>
+            </li>
     </ul>
 </nav>
 
+<p class="medium-text mb20">Подписчики</p>
 
+<!--<app-subscriber-card></app-subscriber-card>-->
+
+<div class="mt20 to-subscribers">
+  <a
+  [routerLink]="['/login']"
+  class="to-subscribers-link medium-text"
+  >Все подписчики</a>
+  <svg icon="arrow" class="to-subcribers-icon"></svg>
+</div>
