update project again and fix avatars

--- a/src/app/Common-UI/profile-card/profile-card.component.scss
+++ b/src/app/Common-UI/profile-card/profile-card.component.scss
@@ -20,8 +20,8 @@
 
 
 .profile-card__avatar {
-    width: 0;
-    height: 0;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
