--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -4,25 +4,32 @@ alt=""
 class="ml16 mb20"
 >
 
-<nav>
-    <ul class="main-menu-list">
-        <li *ngFor="let menuItem of menuItems">
-            <a class="menu-item" [routerLink]="[menuItem]">
-              <svg [icon]="menuItem.icon"></svg>
-              <span>{{  menuItem.label }}</span>
-            </a>
-            </li>
-    </ul>
+<nav class="mb20">
+  <ul class="main-menu-list">
+    <li *ngFor="let menuItem of menuItems">
+      <a
+        class="menu-item"
+        [routerLink]="[menuItem.link]"
+        routerLinkActive="active"
+      >
+        <svg [icon]="menuItem.icon"></svg>
+        <span>{{ menuItem.label }}</span>
+      </a>
+    </li>
+  </ul>
 </nav>
 
 <p class="medium-text mb20">Подписчики</p>
 
-<!--<app-subscriber-card></app-subscriber-card>-->
+<!--@for (subscriber of subcribers$ | async; track subscriber.id) {>--
+  <app-subscriber-card
+    [profile]="subscriber"
+  ></app-subscriber-card>
+}-->
 
 <div class="mt20 to-subscribers">
   <a
-  [routerLink]="['/login']"
-  class="to-subscribers-link medium-text"
-  >Все подписчики</a>
-  <svg icon="arrow" class="to-subcribers-icon"></svg>
+    [routerLink]="['/subscribers']"
+    class="to-subscribers-link medium-text">Все подписчики</a>
+  <svg icon="arrow" class="to-subscribers-icon"></svg>
 </div>
