--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,14 +19,17 @@
 
 
 body {
+    height: 100dvh;
     font-family: "JetBrains Mono", sans-serif;
     background: var(--dark-color);
     color: var(--light-color);
     background-image: url(/Assets/Imgs/background.png);
-    }
-
-.skill-tag {
-    padding: 0px 8px;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  
+  .skill-tag {
+    padding: 0 8px;
     border-radius: 4px;
     border: 1px solid var(--light-color);
     display: inline;
@@ -34,70 +37,102 @@ body {
     font-weight: 700;
     line-height: 24px;
     height: 24px;
-}
-
-
-.btn {
-    width: 42%;
-    border: none;
-    background: var(--primary-color);
-    color: var(--dark-color);
-    padding: 10px 20 px;
+  }
+  
+  .btn {
+    width: 100%;
+    padding: 10px 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
     cursor: pointer;
+    background: var(--primary-color);
+    color: var(--dark-color);
     border-radius: 4px;
     border: 1px solid var(--dark-color);
-}
-
-.btn-shadow {
+  }
+  
+  .btn-icon {
+    width: 44px;
+    height: 44px;
+    cursor: pointer;
+    background: var(--primary-color);
+    color: var(--dark-color);
+    border-radius: 4px;
+    border: 1px solid var(--dark-color);
+  }
+  
+  .svg16 {
+    width: 16px;
+    height: 16px;
+  }
+  
+  .btn-shadow {
     position: relative;
-
+  
     &:before {
-        content: '';
-        position: absolute;
-        bottom: -4px;
-        right: -4px;
-        background: var(--gray-color);
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-
+      content: '';
+      position: absolute;
+      z-index: -1;
+      bottom: -4px;
+      right: -4px;
+      background: var(--gray-color);
+      width: 100%;
+      height: 100%;
+      border-radius: 4px;
     }
-}
-
-.h1 {
-font-size: 48px;
-line-height: 56px;
-font-weight: 800;
-}
-
-
-.h6 {
+  }
+  
+  .h1 {
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 800;
+  }
+  
+  .h4 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 32px;
+  }
+  
+  .h6 {
     font-size: 18px;
     line-height: 24px;
     font-weight: 800;
-}
-
-.subtitle {
-font-size: 14px;
-line-height: 20px;
-}
-
-
-.tt-control-label {
-font-weight: 700;
-font-size: 12px;
-line-height: 16px;
-display: block;
-}
-
-
-.tt-input {
+  }
+  
+  .subtitle {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  
+  .medium-text {
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+  
+  .regular {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  
+  .tt-control-label {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    display: block;
+  }
+  
+  .tt-input {
+    width: 100%;
     margin-top: 8px;
     display: block;
-    border: 1px solid var(--light-color);
+    border: 1px solif var(--light-color);
     border-radius: 4px;
     padding: 12px 20px;
     background: var(--dark-color);
@@ -106,4 +141,4 @@ display: block;
     line-height: 21px;
     font-family: "JetBrains Mono", sans-serif;
     color: var(--light-color);
-}
+  }
