--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -33,3 +33,22 @@ class="ml16 mb20"
     class="to-subscribers-link medium-text">Все подписчики</a>
   <svg icon="arrow" class="to-subscribers-icon"></svg>
 </div>
+
+<footer class="sidebar__footer">
+  @if (me(); as me) {
+    @if (me.avatarUrl) {
+      <img [src]="me.avatarUrl | imgUrl" alt="">
+    } @else {
+      <img src="/Assets/Imgs/avatar-placeholder.png" alt="">
+    }
+  
+
+  <div class="medium-text username-text">{{ me.username}}</div>
+
+
+  <a [routerLink]="['settings']" class="setting-btn">
+  <svg icon="settings"></svg>
+  </a>
+}
+</footer>
+
