--- a/src/app/Common-UI/sidebar/sidebar.component.html
+++ b/src/app/Common-UI/sidebar/sidebar.component.html
@@ -7,14 +7,11 @@ class="ml16 mb20"
 <nav class="mb20">
   <ul class="main-menu-list">
     <li *ngFor="let menuItem of menuItems">
-      <a
-        class="menu-item"
-        [routerLink]="[menuItem.link]"
-        routerLinkActive="active"
-      >
+      <button class="menu-item">
+
         <svg [icon]="menuItem.icon"></svg>
         <span>{{ menuItem.label }}</span>
-      </a>
+      </button>
     </li>
   </ul>
 </nav>
