--- a/src/app/Common-UI/profile-card/profile-card.component.html
+++ b/src/app/Common-UI/profile-card/profile-card.component.html
@@ -19,9 +19,9 @@
 
     <div class="profile-card__tags">
         @for(skill of profile.stack; track skill) {
-        <div class="skil-tag">{{skill}}</div>
+          <div class="skill-tag">{{ skill }}</div>
         }
-    </div>
+      </div>
 
     <div class="profile-card__action-btns">
         <button class="btn">Подписаться</button>
