--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -6,29 +6,23 @@
     margin: 0 5%;
 }
 
-
-
 .login-form {
     width: 440px;
 }
-
 
 .login-form
 .big-logo {
     place-self: center;
 }
 
-
-
 .password-input {
     position: relative;
 }
 
-
 .password-eye-btn{
     position: absolute;
     top: 50%;
-    right: px;
+    right: 12px;
     transform: translateY(-50%);
     background: none;
     border: none;
