--- a/src/app/pages/settings-page/settings-page.component.scss
+++ b/src/app/pages/settings-page/settings-page.component.scss
@@ -7,6 +7,7 @@
 
 
 .profile-form {
+    display: flex;
     padding: 32px;  
     border: 1px solid var(--light-color);
     background: var(--dark-color);
@@ -20,3 +21,11 @@
     gap: 20px;
 }
 
+.profile label {
+
+}
+
+.profile-input {
+
+    
+}
