--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
     --primary-color: #AE7AFF;
     --gray-color: #5f6460;
     --dark-hover-color: #161616;
+    --light-transparent-color: rgba(255, 255, 255, 0.75);
 }
 
 *,
@@ -27,7 +28,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
   }
-  
+
+
   .skill-tag {
     padding: 0 8px;
     border-radius: 4px;
@@ -38,7 +40,8 @@ body {
     line-height: 24px;
     height: 24px;
   }
-  
+
+
   .btn {
     width: 100%;
     padding: 10px 20px;
@@ -51,7 +54,8 @@ body {
     border-radius: 4px;
     border: 1px solid var(--dark-color);
   }
-  
+
+
   .btn-icon {
     width: 44px;
     height: 44px;
@@ -61,15 +65,18 @@ body {
     border-radius: 4px;
     border: 1px solid var(--dark-color);
   }
-  
+
+
   .svg16 {
     width: 16px;
     height: 16px;
   }
-  
+
+
   .btn-shadow {
     position: relative;
-  
+
+
     &:before {
       content: '';
       position: absolute;
@@ -82,52 +89,59 @@ body {
       border-radius: 4px;
     }
   }
-  
+
+
   .h1 {
     font-size: 48px;
     line-height: 56px;
     font-weight: 800;
   }
-  
+
+
   .h4 {
     font-size: 24px;
     font-style: normal;
     font-weight: 800;
     line-height: 32px;
   }
-  
+
+
   .h6 {
     font-size: 18px;
     line-height: 24px;
     font-weight: 800;
   }
-  
+
+
   .subtitle {
     font-size: 14px;
     line-height: 20px;
   }
-  
+
+
   .medium-text {
     font-family: "JetBrains Mono", sans-serif;
     font-size: 12px;
     font-weight: 500;
     line-height: 16px;
   }
-  
+
+
   .regular {
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 20px;
   }
-  
+
   .tt-control-label {
     font-weight: 700;
     font-size: 12px;
     line-height: 16px;
     display: block;
   }
-  
+
+
   .tt-input {
     width: 100%;
     margin-top: 8px;
@@ -142,3 +156,40 @@ body {
     font-family: "JetBrains Mono", sans-serif;
     color: var(--light-color);
   }
+
+
+  .tt-form-label {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  
+  .tt-form-label__text {
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    color: var(--light-transparent-color);
+  }
+  
+  .tt-form-input {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    border: none;
+    background: none;
+    color: var(--light-color);
+    border-bottom: 1px solid var(--light-color);
+    height: 33px;
+
+
+  &:focus-visible {
+    outline: 1px solid var(--primary-color);
+  }
+}
+
+.tt-textarea {
+  height: 84px;
+  resize: none;
+}
