--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -1,7 +1,8 @@
 <app-profile-header
 ></app-profile-header>
 
-<form class="profile-form" [formGroup]="form">
+<form class="profile-form__wrapper" [formGroup]="form">
+    <div class="profile-form">
  <div class="two-columns">
     <label class="tt-form-label">
         <span class="tt-form-label__text">Имя</span>
@@ -12,6 +13,7 @@
         <span class="tt-form-label__text">Фамилия</span>
         <input type="text" class="tt-form-input" formControlName="lastName">
     </label>
+ </div>
 
     <label class="tt-form-label">
         <span class="tt-form-label__text">Telegram username</span>
@@ -31,5 +33,11 @@
         <span class="tt-form-label__text">Навыки (стэк)</span>
         <input type="text" class="tt-form-input" formControlName="stack">
       </label>
+    </div>
+
+    <div>
+        <div>
+            <button class="btn">Сохранить</button>
+        </div>
     </div>
 </form>
