--- a/src/app/pages/settings-page/settings-page.component.scss
+++ b/src/app/pages/settings-page/settings-page.component.scss
@@ -1,31 +1,28 @@
-.host {
+:host {
     display: grid;
     grid-gap: 48px;
-    grid-template-columns: 321px 1fr;
+    grid-template-columns: 322px 1fr;
     padding: 24px;
-}
-
-
-.profile-form {
+  }
+  
+  .profile-form__wrapper {
     display: flex;
-    padding: 32px;  
+    flex-direction: column;
+    justify-content: space-between;
     border: 1px solid var(--light-color);
     background: var(--dark-color);
+    padding: 32px;
+    height: calc(100dvh - (24px * 4));
+  }
+  
+  .profile-form {
     display: grid;
     grid-gap: 20px;
-}
-
-.two-colums {
+  }
+  
+  .two-columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-.profile label {
-
-}
-
-.profile-input {
-
-    
-}
+    grid-gap: 20px;
+  }
+  
