--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -37,7 +37,7 @@
 
     <div>
         <div>
-            <button class="btn">Сохранить</button>
+            <button class="btn" (click)="onSave()">Сохранить</button>
         </div>
     </div>
 </form>
