--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -6,7 +6,7 @@
 
 <a class="btn to-setting-btn" [routerLink]="['/settings']">
     Редактировать
-    <svg icon="settings" class="to-setting-icon"></svg>
+    <svg icon="settings_1" class="to-setting-icon"></svg>
   </a>
 </header>
 <main class="profile-page__body">
